--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,3 +17,11 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
+
+
+// App Layout
+@import "app/components/app";
+@import "app/components/app-header";
+@import "app/components/app-sidebar";
+@import "app/components/app-sidebar-mini";
+@import "app/components/app-title";
