Add styling in _app.scss

--- a/demo/css/app.css
+++ b/demo/css/app.css
@@ -12116,6 +12116,14 @@ readers do not read off random characters that represent icons */
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
 
+.app-content {
+  outline: 1px solid red;
+  min-height: calc(100vh - 50px);
+  margin-top: 50px;
+  padding: 30px;
+  background-color: #e5e5e5;
+  margin-left: 230px; }
+
 .app-header {
   position: fixed;
   left: 0;
