Show how to override bootstrap variables

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 
 // Bootstrap
 @import "_vars.scss";
-@import "_customize-bootstrap.scss";
+@import "_customize-bootstrap.scss"; // this need to be in front of ~bootstrap/scss/bootstrap in order to be able to override it.
 @import "~bootstrap/scss/bootstrap";
 
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
