--- a/src/sass/app/components/_app-header.scss
+++ b/src/sass/app/components/_app-header.scss
@@ -26,6 +26,11 @@
   display: flex;
   align-self: center;
   margin-right: 15px;
+
+  // Mobile size
+  @media (max-width: 480px) {
+    display: none;
+  }
 }
 
 .app-search__input {
