--- a/src/sass/app/components/_app-header.scss
+++ b/src/sass/app/components/_app-header.scss
@@ -82,8 +82,27 @@
   }
 }
 
+.app-sidebar__toggle {
+  padding: 0 15px;
+  color: #fff;
+  line-height: 50px;
+  transition: background-color 0.3s ease;
+  &:focus,
+  &:hover {
+    color: #fff;
+    background-color: rgba(0,0,0,0.1);
+    text-decoration: none;
+  }
 
+  @media (max-width: 767px) {
+    order: -1;
+  }
+}
 
+.app-sidebar__toggle > span {
+  display: inline-block;
+  padding: 15px;
+}
 
 
 
