--- a/src/sass/app/components/_app-sidebar.scss
+++ b/src/sass/app/components/_app-sidebar.scss
@@ -34,3 +34,7 @@
   // I don't know the purpose of the below
   border-left: 2px solid transparent;
 }
+
+.app.sidebar-toggled .app-sidebar{
+  left: 0;
+}
